--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
     <nav class="navbar">
         <div class="max-width">
-            <div class="logo"><a href="https://github.com/deeqakkk"><i class="fab fa-github"></i> @<span>deeqakkk.</span></a></div>
+            <div class="logo"><a href="https://github.com/AdhamAlaa20"><i class="fab fa-github"></i> <span>ADHAM ALAA</span></a></div>
             <ul class="menu">
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
@@ -30,8 +30,6 @@
                 <li><a href="#Mates" class="menu-btn">Experience</a></li>
                 <li><a href="#contact" class="menu-btn">Contact</a></li>
             </ul>
-            <div class="menu-btn">
-                <i class="fas fa-bars"></i>
             </div>
         </div>
     </nav>
@@ -41,9 +39,8 @@
         <div class="max-width">
             <div class="home-content">
                 <div class="text-1">Hello, my name is</div>
-                <div class="text-2">Deepak Verma</div>
+                <div class="text-2">Adham Alaa</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
-                <a href="https://drive.google.com/file/d/1G6GBjMMuh1AbSzWVBloRw1fnOIPqS2Nj/view?usp=sharing"><i class="fas fa-file-download"></i> Resume</a>
             </div>
         </div>
     </section>
@@ -54,18 +51,11 @@
         <div class="max-width">
             <h2 class="title">About me</h2>
             <div class="about-content">
-                <div class="column left">
-                    <img src="images/Deepakverma.jpeg" alt="Deepak Verma Photo">
-                </div>
-
-                <div class="column right">
-                    <div class="text">I'm Deepak and I'm a <span class="typing-2"></span></div>
+                    <div class="text">I'm Adham and I'm a <span class="typing-2"></span></div>
                     <p>I'm pursuing my B.Tech degree(Information Technology) from "Guru Gobind Singh Indraprastha University🎓". I'm good at frontend development🧬  and currenlty learning backend. I enjoy solving DSA questions and come out with my own algo for it. Apart from all this I have started my journey as a Open Source Contributor this year📅 itself(2021).<br>
                     I love watching Web-series📺 and making new friends as well😎. </p>
-                    <a href="https://www.linkedin.com/in/deeqakkk/"><i class="fab fa-linkedin"></i> Know More</a>
                 </div>
             </div>
-        </div>
     </section>
 
     <!-- services section start --> 
@@ -111,14 +101,13 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My creative skills & experiences.</div>
-                    <p>🔴I'm decent at programming, I can code well. I'm familiar with some of the latest Tech
+                    <p>⚫I'm decent at programming, I can code well. I'm familiar with some of the latest Tech
                         stacks of my field.<br>
-                        🔴I had been a "Contributor👨‍💻" in Open-Source events like GSSoC'21 and CrossWoc'21.
+                        ⚫I had been a "Contributor👨‍💻" in Open-Source events like GSSoC'21 and CrossWoc'21.
                         <br>
-                        🔴Another special experience is being a "Mentor👨‍🎓" where i got to interact with new
+                        ⚫Another special experience is being a "Mentor👨‍🎓" where i got to interact with new
                         mates and help them with there issues.
                     </p>
-                    <a href="https://twitter.com/Deeqakkk"> <i class="fab fa-twitter"></i> Let's Connect</a>
                 </div>
                 <div class="column right">
                     <div class="bars">
@@ -276,7 +265,7 @@
 
     <!-- footer section start -->
     <footer>
-       <p> Created with Squid💻 By<span> Deepak Verma.</span></p>
+       <p> Created By<span>Adham.</span></p>
     </footer>
 
     <script src="./assets/js/freelancer.js"></script>
