--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adham Alaa</title>
+    <link rel="icon" href="./assets/img/image_2023-05-17_002637.ico">
     <link rel="stylesheet" href="./assets/css/style.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -27,7 +28,7 @@
                 <li><a href="#about" class="menu-btn">About</a></li>
                 <li><a href="#services" class="menu-btn">Interests</a></li>
                 <li><a href="#skills" class="menu-btn">Skills</a></li>
-                <li><a href="#Mates" class="menu-btn">Experience</a></li>
+                <li><a href="#teams" class="menu-btn">Experience</a></li>
                 <li><a href="#contact" class="menu-btn">Contact</a></li>
             </ul>
             </div>
@@ -113,21 +114,21 @@
                     <div class="bars">
                         <div class="info">
                             <span>C++</span>
-                            <span>80%</span>
+                            <span>85%</span>
                         </div>
                         <div class="line html"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
                             <span>HTML</span>
-                            <span>85%</span>
+                            <span>90%</span>
                         </div>
                         <div class="line css"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
                             <span>JavaScript</span>
-                            <span>70%</span>
+                            <span>85%</span>
                         </div>
                         <div class="line js"></div>
                     </div>
@@ -140,10 +141,10 @@
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>DSA</span>
-                            <span>65%</span>
+                            <span>Node js</span>
+                            <span>80%</span>
                         </div>
-                        <div class="line mysql"></div>
+                        <div class="line node"></div>
                     </div>
                 </div>
             </div>
@@ -155,26 +156,6 @@
         <div class="max-width">
             <h2 class="title">My Experience</h2>
             <div class="carousel owl-carousel">
-                <div class="card">
-                    <div class="box">
-                        <img src="images/profile-1.jpeg" alt="DevIncept-logo">
-                        <div class="text">Mentor</div>
-                        <p>I'm currently mentoring porjects here. It feels 
-                            good to talk to new mates and helping them in getting started 
-                            with open source journey.
-                        </p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <img src="images/profile-2.jpg" alt="LetsGrowMore-logo">
-                        <div class="text">Mentor</div>
-                        <p>My journey as a mentor started here, I never thought that it 
-                            would be so amazing experience. It surely boosted my confidence.
-
-                        </p>
-                    </div>
-                </div>
                 <div class="card">
                     <div class="box">
                         <img src="images/profile-3.png" alt="GSSoC-logo">
@@ -218,21 +199,21 @@
                             <i class="fas fa-user"></i>
                             <div class="info">
                                 <div class="head">Name</div>
-                                <div class="sub-title">Deepak Verma</div>
+                                <div class="sub-title">Adham Alaa</div>
                             </div>
                         </div>
                         <div class="row">
                             <i class="fas fa-map-marker-alt"></i>
                             <div class="info">
                                 <div class="head">Address</div>
-                                <div class="sub-title">New Delhi ,India</div>
+                                <div class="sub-title">Cairo, Egypt</div>
                             </div>
                         </div>
                         <div class="row">
                             <i class="fas fa-envelope"></i>
                             <div class="info">
                                 <div class="head">Email</div>
-                                <div class="sub-title">0822deepakverma@gmail.com</div>
+                                <div class="sub-title">adham.alaa699@gmail.com</div>
                             </div>
                         </div>
                     </div>
@@ -265,7 +246,7 @@
 
     <!-- footer section start -->
     <footer>
-       <p> Created By<span>Adham.</span></p>
+       <p> Created By<span> Adham.</span></p>
     </footer>
 
     <script src="./assets/js/freelancer.js"></script>
