--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                     <div class="text">I'm Adham and I'm a <span class="typing-2"></span></div>
-                    <p>I'm pursuing my B.Tech degree(Information Technology) from "Guru Gobind Singh Indraprastha University🎓". I'm good at frontend development🧬  and currenlty learning backend. I enjoy solving DSA questions and come out with my own algo for it. Apart from all this I have started my journey as a Open Source Contributor this year📅 itself(2021).<br>
-                    I love watching Web-series📺 and making new friends as well😎. </p>
+                    <p>I'm pursuing my bachelor degree (Mechatronics) from "Faculty of Engineering AinShams University🎓". I'm good at frontend development🧬  and currenlty mastering backend. I enjoy solving DSA questions and come out with my own algo for it.</p>
                 </div>
             </div>
     </section>
@@ -68,11 +67,11 @@
                     <div class="box">
                         <i class="fas fa-palette"></i>
                         <div class="text">Web Development</div>
-                        <p>I have learnt web development , and have worked on porjects as well. Now, my laptop and me know each other so well. 
-                            And also I am always try to upgrade myself with new tech stacks.</p>
+                        <p>I have learnt web development , and have worked on porjects as well. 
+                            And I am always trying to upgrade myself with new tech stacks.</p>
                     </div>
                 </div>
-                <div class="card">
+                <!-- <div class="card">
                     <div class="box">
                         <i class="fas fa-code"></i>
                         <div class="text">Data strucutres & Algorithm</div>
@@ -80,14 +79,12 @@
                             Many times i got stuck in some question but that's not a problem anymore.
                         </p>
                     </div>
-                </div>
+                </div> -->
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-users"></i>
-                        <div class="text">Open-Source</div>
-                        <p>It's amazing to be a part of open source community out there. Exploring Open source is one 
-                            field that i wish i should have started in early stages of my college 
-                            life.</p>
+                        <div class="text">Tutoring</div>
+                        <p>It's amazing to conduct and make education way easier, I gladly helped over a hunred student on various levels to pass and sometimes excel in Maths and Physics</p>
                     </div>
                 </div>
                </div>
@@ -101,13 +98,12 @@
             <h2 class="title">My skills</h2>
             <div class="skills-content">
                 <div class="column left">
-                    <div class="text">My creative skills & experiences.</div>
+                    <div class="text">My skills & experiences.</div>
                     <p>⚫I'm decent at programming, I can code well. I'm familiar with some of the latest Tech
                         stacks of my field.<br>
-                        ⚫I had been a "Contributor👨‍💻" in Open-Source events like GSSoC'21 and CrossWoc'21.
-                        <br>
-                        ⚫Another special experience is being a "Mentor👨‍🎓" where i got to interact with new
-                        mates and help them with there issues.
+                        ⚫I speak three languages, I seek for speaking more 👀.<br>
+                        ⚫I have been a Physics/Maths tutor for over 6 years on various levels.<br>
+                        ⚫I have several hobbies like drawing, writing, playing soccer and playing violin.
                     </p>
                 </div>
                 <div class="column right">
@@ -137,7 +133,7 @@
                             <span>BootStrap</span>
                             <span>90%</span>
                         </div>
-                        <div class="line php"></div>
+                        <div class="line btstrp"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
@@ -198,8 +194,7 @@
                         <div class="row">
                             <i class="fas fa-user"></i>
                             <div class="info">
-                                <div class="head">Name</div>
-                                <div class="sub-title">Adham Alaa</div>
+                                <div class="sub-title"><a href="https://www.linkedin.com/in/adham-alaa-383048217/">Adham Alaa</a></div>
                             </div>
                         </div>
                         <div class="row">
