--- a/index.html
+++ b/index.html
@@ -163,11 +163,8 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile-4.jpeg" alt="CrossWoc-logo">
-                        <div class="text">Contributor</div>
-                        <p>It taught me that asking your friends for help is okay, most of them don't judge.
-                         We all are/was beginner at some stages of our life which is fine.
-                        </p>
+                        <img src="./assets/img/goldcalc.png" href="https://adhamalaa20.github.io/GoldCalcultor" alt="goldcalc">
+                        <a href="https://adhamalaa20.github.io/GoldCalcultor" class="text">Contributor</a>
                     </div>
                 </div>
                 <div class="card">
