--- a/index.html
+++ b/index.html
@@ -154,25 +154,38 @@
             <div class="carousel owl-carousel">
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile-3.png" alt="GSSoC-logo">
-                        <div class="text">Participant</div>
-                        <p>Here i made my first PR, which got successfully merged and i was on 7th sky after getting that notification.
-                            It's a good source to start.
-                        </p>
+                        <img src="./assets/img/petsignup.png" alt="PetsignUp">
+                        <a class="text" href="https://adhamalaa20.github.io/petsignup/">Puppy SignUp Form</a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="./assets/img/goldcalc.png" href="https://adhamalaa20.github.io/GoldCalcultor" alt="goldcalc">
-                        <a href="https://adhamalaa20.github.io/GoldCalcultor" class="text">Contributor</a>
+                        <img src="./assets/img/goldcalc.png" alt="goldcalc">
+                        <a href="https://adhamalaa20.github.io/GoldCalcultor" class="text">GoldCalcultor </a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile-5.jpg" alt="Elan&Vision-logo">
-                        <div class="text">Campus Ambassdor</div>
-                        <p>My very first internship that taught me socializing with new peoples or
-                            how to convey them our ideas.It was good experience working here.</p>
+                        <img src="./assets/img/snakegame.jpeg" alt="SnakeGame">
+                        <a href="https://adhamalaa20.github.io/SnakeGame/" class="text">Snake Game</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="./assets/img/DadJoke.png" alt="DadJokes">
+                        <a class="text" href="https://adhamalaa20.github.io/dadjokes/">Dad Jokes</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="./assets/img/avengers.png" alt="Avengers">
+                        <a href="https://adhamalaa20.github.io/avengers/" class="text">Avengers</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="./assets/img/Seemore.png" alt="See More">
+                        <a href="https://github.com/AdhamAlaa20" class="text">See More 👀</a>
                     </div>
                 </div>
             </div>
