--- a/index.html
+++ b/index.html
@@ -154,6 +154,24 @@
             <div class="carousel owl-carousel">
                 <div class="card">
                     <div class="box">
+                        <img src="./assets/img/newshome.png" alt="newshome">
+                        <a href="https://adhamalaa20.github.io/newshomepage/" class="text">News Home</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="./assets/img/ecommerce.png" alt="ecommerce">
+                        <a class="text" href="https://adhamalaa20.github.io/ecommerce/">E-commerce Page</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="./assets/img/cycle.png" alt="cycle">
+                        <a href="https://adhamalaa20.github.io/CycleOfGrief/" class="text">Cycle Of Grief</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
                         <img src="./assets/img/petsignup.png" alt="PetsignUp">
                         <a class="text" href="https://adhamalaa20.github.io/petsignup/">Puppy SignUp Form</a>
                     </div>
