--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <nav class="navbar">
         <div class="max-width">
             <div class="logo"><a href="https://github.com/AdhamAlaa20"><i class="fab fa-github"></i> <span>ADHAM ALAA</span></a></div>
-            <ul class="menu">
+            <ul class="menu"    id="menu-close">
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
                 <li><a href="#services" class="menu-btn">Interests</a></li>
@@ -35,6 +35,8 @@
         </div>
     </nav>
 
+    
+    
     <!-- home section start -->
     <section class="home" id="home">
         <div class="max-width">
