--- a/index.html
+++ b/index.html
@@ -156,14 +156,8 @@
             <div class="carousel owl-carousel">
                 <div class="card">
                     <div class="box">
-                        <img src="./assets/img/newshome.png" alt="newshome">
-                        <a href="https://adhamalaa20.github.io/newshomepage/" class="text">News Home</a>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <img src="./assets/img/ecommerce.png" alt="ecommerce">
-                        <a class="text" href="https://adhamalaa20.github.io/ecommerce/">E-commerce Page</a>
+                        <img src="./assets/img/seegypt.png" alt="seegypt">
+                        <a class="text" href="https://adhamalaa20.github.io/seegypt">Seegypt</a>
                     </div>
                 </div>
                 <div class="card">
@@ -174,8 +168,14 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="./assets/img/petsignup.png" alt="PetsignUp">
-                        <a class="text" href="https://adhamalaa20.github.io/petsignup/">Puppy SignUp Form</a>
+                        <img src="./assets/img/ecommerce.png" alt="ecommerce">
+                        <a class="text" href="https://adhamalaa20.github.io/ecommerce/">E-commerce Page</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="./assets/img/newshome.png" alt="newshome">
+                        <a href="https://adhamalaa20.github.io/newshomepage/" class="text">News Home</a>
                     </div>
                 </div>
                 <div class="card">
@@ -198,8 +198,8 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="./assets/img/cycle.png" alt="cycle">
-                        <a href="https://adhamalaa20.github.io/CycleOfGrief/" class="text">Cycle Of Grief</a>
+                        <img src="./assets/img/petsignup.png" alt="petsignup">
+                        <a href="https://adhamalaa20.github.io/petsignup/" class="text">Pet SignUp</a>
                     </div>
                 </div>
                 <div class="card">
